USB port 2 host only

--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -1579,11 +1579,11 @@ CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=2
 CONFIG_USB_GADGET_SELECTED=y
-# CONFIG_USB_GADGET_FUSB300 is not set
+CONFIG_USB_GADGET_FUSB300=y
+CONFIG_USB_FUSB300=y
 # CONFIG_USB_GADGET_R8A66597 is not set
 # CONFIG_USB_GADGET_PXA_U2O is not set
 # CONFIG_USB_GADGET_M66592 is not set
-CONFIG_USB_SW_SUN4I_UDC0=y
 # CONFIG_USB_GADGET_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_ZERO is not set
@@ -1610,8 +1610,8 @@ CONFIG_USB_SW_SUN4I_USB=y
 CONFIG_USB_SW_SUN4I_USB_MANAGER=y
 # CONFIG_USB_SW_SUN4I_USB0_NULL is not set
 # CONFIG_USB_SW_SUN4I_USB0_DEVICE_ONLY is not set
-# CONFIG_USB_SW_SUN4I_USB0_HOST_ONLY is not set
-CONFIG_USB_SW_SUN4I_USB0_OTG=y
+CONFIG_USB_SW_SUN4I_USB0_HOST_ONLY=y
+# CONFIG_USB_SW_SUN4I_USB0_OTG is not set
 CONFIG_USB_SW_SUN4I_USB_DEBUG=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
