--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -917,7 +917,16 @@ CONFIG_TOUCHSCREEN_SUN4I_TS=m
 CONFIG_TOUCHSCREEN_FT5X_TS=m
 CONFIG_TOUCHSCREEN_ZT8031=m
 # CONFIG_TOUCHSCREEN_COASIA is not set
-# CONFIG_INPUT_MISC is not set
+CONFIG_INPUT_MISC=y
+# CONFIG_INPUT_AD714X is not set
+CONFIG_INPUT_ATI_REMOTE=m
+CONFIG_INPUT_ATI_REMOTE2=m
+# CONFIG_INPUT_KEYCHORD is not set
+# CONFIG_INPUT_POWERMATE is not set
+# CONFIG_INPUT_UINPUT is not set
+CONFIG_INPUT_GPIO=m
+# CONFIG_INPUT_ADXL34X is not set
+# CONFIG_INPUT_CMA3000 is not set
 
 #
 # Hardware I/O ports
