--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.52 Kernel Configuration
+# Linux/arm 3.0.57 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_CHIP_ID=1123
@@ -378,9 +378,9 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="mem=448M@0x40000000 console=ttyS0,115200"
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE="mem=448M@0x40000000 console=ttyS0,115200 --no-log"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_AUTO_ZRELADDR is not set
@@ -924,7 +924,7 @@ CONFIG_INPUT_ATI_REMOTE2=m
 # CONFIG_INPUT_KEYCHORD is not set
 # CONFIG_INPUT_POWERMATE is not set
 # CONFIG_INPUT_UINPUT is not set
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_CMA3000 is not set
 
@@ -938,7 +938,9 @@ CONFIG_SERIO_LIBPS2=y
 # CONFIG_SERIO_RAW is not set
 # CONFIG_SERIO_ALTERA_PS2 is not set
 # CONFIG_SERIO_PS2MULT is not set
-# CONFIG_GAMEPORT is not set
+CONFIG_GAMEPORT=m
+# CONFIG_GAMEPORT_NS558 is not set
+# CONFIG_GAMEPORT_L4 is not set
 # CONFIG_GSENSOR is not set
 
 #
@@ -1323,7 +1325,7 @@ CONFIG_FB_CFB_IMAGEBLIT=m
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
 # CONFIG_FB_BACKLIGHT is not set
-# CONFIG_FB_MODE_HELPERS is not set
+CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TILEBLITTING is not set
 
 #
@@ -1506,12 +1508,10 @@ CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
-CONFIG_USB_SW_SUN4I_HCD=y
-CONFIG_USB_SW_SUN4I_HCI=y
-CONFIG_USB_SW_SUN4I_EHCI0=y
-CONFIG_USB_SW_SUN4I_EHCI1=y
-CONFIG_USB_SW_SUN4I_OHCI0=y
-CONFIG_USB_SW_SUN4I_OHCI1=y
+CONFIG_USB_SUNXI_EHCI=y
+CONFIG_USB_SUNXI_OHCI=y
+CONFIG_USB_SUNXI_COMMON=y
+# CONFIG_USB_SW_SUN4I_HCD0 is not set
 # CONFIG_USB_MUSB_HDRC is not set
 
 #
@@ -1544,7 +1544,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_STORAGE_ENE_UB6250=y
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -1592,6 +1591,7 @@ CONFIG_USB_FUSB300=y
 # CONFIG_USB_GADGET_R8A66597 is not set
 # CONFIG_USB_GADGET_PXA_U2O is not set
 # CONFIG_USB_GADGET_M66592 is not set
+# CONFIG_USB_SW_SUN4I_UDC0 is not set
 # CONFIG_USB_GADGET_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_ZERO is not set
@@ -1616,10 +1616,8 @@ CONFIG_USB_FILE_STORAGE_TEST=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_USB_SW_SUN4I_USB=y
 CONFIG_USB_SW_SUN4I_USB_MANAGER=y
-CONFIG_USB_SW_SUN4I_USB0_NULL=y
-# CONFIG_USB_SW_SUN4I_USB0_DEVICE_ONLY is not set
 # CONFIG_USB_SW_SUN4I_USB0_HOST_ONLY is not set
-# CONFIG_USB_SW_SUN4I_USB0_OTG is not set
+CONFIG_USB_SW_SUN4I_USB0_NULL=y
 CONFIG_USB_SW_SUN4I_USB_DEBUG=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
@@ -1743,14 +1741,14 @@ CONFIG_ZRAM=m
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_LIRC_STAGING=y
-CONFIG_LIRC_IGORPLUGUSB=m
-CONFIG_LIRC_IMON=m
-CONFIG_LIRC_SASEM=m
+# CONFIG_LIRC_IGORPLUGUSB is not set
+# CONFIG_LIRC_IMON is not set
+# CONFIG_LIRC_SASEM is not set
 CONFIG_LIRC_SERIAL=m
 CONFIG_LIRC_SERIAL_TRANSMITTER=y
 CONFIG_LIRC_SIR=m
-CONFIG_LIRC_TTUSBIR=m
-CONFIG_LIRC_ZILOG=m
+# CONFIG_LIRC_TTUSBIR is not set
+# CONFIG_LIRC_ZILOG is not set
 # CONFIG_EASYCAP is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
