--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -845,7 +845,7 @@ CONFIG_KEYBOARD_ATKBD=y
 CONFIG_KEYBOARD_SUN4IKEYPAD=m
 CONFIG_KEYBOARD_SUN4I_KEYBOARD=m
 CONFIG_KEYBOARD_HV2605_KEYBOARD=m
-CONFIG_IR_SUN4I=m
+CONFIG_IR_SUN4I=y
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
