current Xubuntu configuration

--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -910,17 +910,17 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
-CONFIG_TOUCHSCREEN_GT801=m
-CONFIG_TOUCHSCREEN_GT811=m
-CONFIG_TOUCHSCREEN_GT818=m
+# CONFIG_TOUCHSCREEN_GT801 is not set
+# CONFIG_TOUCHSCREEN_GT811 is not set
+# CONFIG_TOUCHSCREEN_GT818 is not set
 CONFIG_TOUCHSCREEN_SUN4I_TS=m
-CONFIG_TOUCHSCREEN_FT5X_TS=m
-CONFIG_TOUCHSCREEN_ZT8031=m
+# CONFIG_TOUCHSCREEN_FT5X_TS is not set
+# CONFIG_TOUCHSCREEN_ZT8031 is not set
 # CONFIG_TOUCHSCREEN_COASIA is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
-CONFIG_INPUT_ATI_REMOTE=m
-CONFIG_INPUT_ATI_REMOTE2=m
+# CONFIG_INPUT_ATI_REMOTE is not set
+# CONFIG_INPUT_ATI_REMOTE2 is not set
 # CONFIG_INPUT_KEYCHORD is not set
 # CONFIG_INPUT_POWERMATE is not set
 # CONFIG_INPUT_UINPUT is not set
@@ -938,9 +938,7 @@ CONFIG_SERIO_LIBPS2=y
 # CONFIG_SERIO_RAW is not set
 # CONFIG_SERIO_ALTERA_PS2 is not set
 # CONFIG_SERIO_PS2MULT is not set
-CONFIG_GAMEPORT=m
-# CONFIG_GAMEPORT_NS558 is not set
-# CONFIG_GAMEPORT_L4 is not set
+# CONFIG_GAMEPORT is not set
 # CONFIG_GSENSOR is not set
 
 #
