--- a/linux-sunxi/.config
+++ b/linux-sunxi/.config
@@ -378,7 +378,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="mem=448M@0x40000000 console=ttyS0,115200 --no-log"
+CONFIG_CMDLINE="console=ttyS0,115200"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
@@ -1267,7 +1267,7 @@ CONFIG_USB_PWC=m
 CONFIG_USB_ZR364XX=m
 CONFIG_USB_S2255=m
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
-# CONFIG_VIDEO_AVS_COUNTER is not set
+CONFIG_VIDEO_AVS_COUNTER=y
 CONFIG_VIDEO_SUN4I_CEDAR=y
 CONFIG_VIDEO_DECODER_SUN4I=y
 CONFIG_VIDEO_CSI_SUN4I=y
