--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "u-boot/u-boot"]
 	path = u-boot/u-boot
-	url = git://git.denx.de/u-boot.git
+	url = https://github.com/open-source-code-archive/u-boot.git
