--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libcedarx"]
 	path = libcedarx
 	url = https://github.com/willswang/libcedarx
+[submodule "sunxi-tools"]
+	path = sunxi-tools
+	url = https://github.com/linux-sunxi/sunxi-tools.git
