Moving U-Boot submodule to boot/

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = kernel/linux-sunxi
 	url = https://github.com/open-source-code-archive/linux.git
 [submodule "u-boot/u-boot"]
-	path = u-boot/u-boot
+	path = boot/u-boot
 	url = https://github.com/open-source-code-archive/u-boot.git
 [submodule "libcedarx"]
 	path = libcedarx
